# strawberry-playground

./: .flake8  .gitignore  README.md  pyproject.toml  query.graphql  schema.py
.github/workflows/: check.yml
.graphql/: schema.graphql
env/: .env.prod  .env.test
output/: types.py  types.ts
src/sbplay/: app.py  main.py  resolvers.py  schema.py
src/sbplay/models/: book.py  user.py
src/sbplay/services/: books.py  users.py
tests/: test_schema.py
